test/fixture/invalid/importCycleB.scrypt
import "./importCycleC.scrypt";

contract B {
  public function main() {
    require(true);
  }
}